--- a/ethereum/package.json
+++ b/ethereum/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.2.1",
     "hardhat": "^2.12.1"
   },
   "dependencies": {
