--- a/web/package.json
+++ b/web/package.json
@@ -6,19 +6,34 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-types": "typechain --target=ethers-v5 'contracts/**/*.json'"
   },
   "dependencies": {
+    "axios": "^1.1.3",
+    "ethers": "^5.7.2",
+    "ipfs-http-client": "^59.0.0",
     "next": "13.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "web3": "^1.8.0",
+    "web3modal": "^1.9.9"
   },
   "devDependencies": {
+    "@typechain/ethers-v5": "^10.1.1",
+    "@typechain/truffle-v5": "^8.0.2",
+    "@typechain/web3-v1": "^6.0.2",
     "@types/node": "18.11.7",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "@types/web3": "^1.2.2",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1",
+    "ts-node": "^10.9.1",
+    "typechain": "^8.1.1",
     "typescript": "4.8.4"
   }
 }
