--- a/eth/package.json
+++ b/eth/package.json
@@ -33,7 +33,6 @@
   "devDependencies": {
     "@eth-optimism/plugins": "^1.0.0-alpha.3",
     "@truffle/hdwallet-provider": "^2.1.0",
-    "@truffle/resolver": "^9.0.21",
     "@typechain/ethers-v5": "^10.1.1",
     "@typechain/truffle-v5": "^8.0.2",
     "@typechain/web3-v1": "^6.0.2",
@@ -54,6 +53,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.7.3"
+    "@openzeppelin/contracts": "^4.7.3",
+    "@truffle/resolver": "^9.0.21"
   }
 }
