--- a/web/package.json
+++ b/web/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
     "ethers": "^5.7.2",
     "ipfs-http-client": "^59.0.0",
     "next": "13.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "reactstrap": "^9.1.5",
     "web3modal": "^1.9.9"
   },
   "devDependencies": {
