--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reactstrap": "^9.1.5",
+    "sass": "^1.56.1",
     "web3modal": "^1.9.9"
   },
   "devDependencies": {
