--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,9 @@
     "generate-types": "typechain --target=ethers-v5 'contracts/**/*.json'"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.1",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "ethers": "^5.7.2",
